My First Commit

--- a/package.json
+++ b/package.json
@@ -14,10 +14,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "expo-file-system": "^9.0.1",
+    "fs": "0.0.1-security",
+    "fs-extra": "^9.0.1",
+    "fs-react": "0.0.4",
+    "localstorage-polyfill": "^1.0.1",
     "next": "^9.4.4",
     "querystring": "^0.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-native-fs": "^2.16.6",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-router-hash-history": "^0.2.3",
